--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -41,5 +41,5 @@ jobs:
       with:
         context: .
         push: true
-        tags: user/app:latest
+        tags: ronaltama/belajar-ci-cd:latest
         
